added delete all instruc

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
       <h1 id="header1">Store links / Save your tabs</h1>
+      <h3>To delete all, double click</h3>
     <input type="text" id="input-el" />
     <button id="input-btn">SAVE INPUT</button>
     <button id="tab-btn">SAVE TAB</button>
